k8s/sre-challenge-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-challenge-app
  namespace: elo-sre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sre-challenge-app
  template:
    metadata:
      labels:
        app: sre-challenge-app
    spec:
      containers:
        - name: sre-challenge-app
          image: faelsouz/sre-challenge-app:1.1
          ports:
          - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "2"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 240
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 240
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
