k8s/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: elo-sre
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
  type: NodePort
