k8s/sre-challenge-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-challenge-app
  namespace: elo-sre
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sre-challenge-app
  type: NodePort
