k8s/app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-local-port-forward
  namespace: elo-sre
spec:
  podSelector:
    matchLabels:
      app: sre-challenge-app
  ingress:
    - from:
        - ipBlock:
            cidr: 127.0.0.1/32
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
